# debot

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GENERAL-CONTRIBUTING.md  README.md  README_MULTIBOT.md  bots.toml
.github/ISSUE_TEMPLATE/: Bug Report.yml  Feature Request.yml  config.yml
docs/: CLIENT_LAYER.md  plan.md  request-response.md
examples/: actor.rs  network.rs
src/: lib.rs  main.rs
src/application/: mod.rs
src/client/: actor.rs  client.rs  messages.rs  mod.rs
src/client/commands/: mod.rs  send_command.rs  status_command.rs
src/config/: bot_config.rs  config.rs  mod.rs
src/consensus/: actor.rs  mod.rs
src/network/: actor.rs  behaviour.rs  codec.rs  libp2p.rs  messages.rs  mod.rs  peer_manager.rs  peer_registry.rs  swarm.rs  transport.rs
src/raft/: actor.rs  election.rs  log.rs  mod.rs  rpc.rs  state.rs  types.rs
src/storage/: log_storage.rs  mod.rs  state_storage.rs
src/util/: errors.rs  mod.rs
