[package]
name = "debot"
version = "0.1.0"
authors = ["Hoando. <hoando.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.53.2", features = ['full'] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
raft = "0.7.0"
telegram-bot = "0.8.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8.14"
libp2p-identify = "^0.44.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"