[package]
name = "debot"
version = "0.1.0"
authors = ["Hoando. <hoando.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.54.1", features = ['full'] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
telegram-bot = "0.8.0"
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

async-trait = "0.1.83"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix = "0.13"
libp2p-identity = "0.2.9"

bytes = "1.10.1"

tokio-util = "0.7.13"
serde_json = "1.0.133"
bincode = { version = "2.0.1", features = ["serde"] }

anyhow = "1.0.94"
actix-rt = "2.5.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
